@@ -21,7 +21,7 @@ my %WriteMakefileArgs = (
     "File::Temp" => 0,
     "Hash::SharedMem" => 0,
     "JSON::XS" => 0,
-    "Prometheus::Tiny" => "0.009",
+    "Prometheus::Tiny" => "0.010",
     "parent" => 0,
     "strict" => 0,
     "warnings" => 0
@@ -33,7 +33,8 @@ my %WriteMakefileArgs = (
     "Plack::Test" => 0,
     "Test::Differences" => 0,
     "Test::Exception" => 0,
-    "Test::More" => 0
+    "Test::More" => 0,
+    "Test::Warn" => 0
   },
   "VERSION" => "0.025",
   "test" => {
@@ -52,10 +53,11 @@ my %FallbackPrereqs = (
   "Hash::SharedMem" => 0,
   "JSON::XS" => 0,
   "Plack::Test" => 0,
-  "Prometheus::Tiny" => "0.009",
+  "Prometheus::Tiny" => "0.010",
   "Test::Differences" => 0,
   "Test::Exception" => 0,
   "Test::More" => 0,
+  "Test::Warn" => 0,
   "parent" => 0,
   "strict" => 0,
   "warnings" => 0
