@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+- Update for Prometheus::Tiny 0.010 undef value protection
 
 0.025     2021-12-07 16:46:28+11:00 Australia/Melbourne
 - Update for Prometheus::Tiny 0.009 default_labels support
